# AxelarX

./: .gitignore  .vercelignore  ADVANCED_CHARTING_AND_ANALYTICS.md  AUTO_DEPLOY.md  CHECKLIST.md  COMPLETE_PROJECT_TODO.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  EVM_DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_STATUS.md  INVESTOR_PITCH.md  LICENSE  PORTFOLIO_MANAGEMENT_FEATURE.md  PROJECT_ANALYSIS_AND_IMPROVEMENTS.md  PROJECT_DESCRIPTION.md  QUICK_START.md  QUICK_START_DEPLOYMENT.md  README.md  README_DEPLOY.md  README_DEPLOYMENT.md  REALTIME_CHART_INTEGRATION.md  SETUP_AND_DEPLOY.md  SETUP_PREREQUISITES.md  SUMMARY.md  WASM_FIX_SUMMARY.md  deploy.ps1  env.example  fix-and-deploy-vercel.ps1  package-lock.json  package.json  setup-and-deploy.ps1  vercel.json
.cursor/plans/: axelarx_analysis_and_development_plan_045773b6.plan.md  axelarx_project_analysis_&_feature_suggestions_2dbf622d.plan.md
.github/workflows/: README.md  ci.yml  deploy.yml  lint.yml  nightly.yml
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/orderbook/: Cargo.toml
contracts/orderbook/src/: lib.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
docs/implementation-plans/: 01-advanced-order-types.md  02-margin-trading.md  03-liquidity-mining.md  04-public-rest-api.md  README.md
evm-contracts/: .gitignore  deployment.json  env.example  env.template.txt  hardhat.config.js  package-lock.json  package.json
evm-contracts/contracts/: AxelarXBridge.sol  AxelarXOrderBook.sol  AxelarXSettlement.sol  MockERC20.sol
evm-contracts/scripts/: deploy-multichain.js  deploy.js  get-private-key.js  get-wallet-info.js
frontend/: env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analytics/: page.tsx
frontend/app/bridge/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/pools/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/referrals/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/: LivePriceTicker.tsx  NotificationCenter.tsx  WalletConnect.tsx
frontend/components/alerts/: PriceAlertModal.tsx
frontend/components/analytics/: MarketDepth.tsx  MarketSentiment.tsx  OrderFlow.tsx  VolumeProfile.tsx
frontend/components/liquidity/: LiquidityMiningPanel.tsx
frontend/components/notifications/: NotificationCenter.tsx
frontend/components/portfolio/: PerformanceAnalytics.tsx  PositionTracker.tsx  TradeHistory.tsx
frontend/components/trading/: AdvancedChart.tsx  AdvancedOrderForm.tsx  EnhancedOrderBook.tsx  IndicatorPanel.tsx  IndicatorSettings.tsx  MarginTradingPanel.tsx  MarketSelector.tsx  OrderBook.tsx  RecentTrades.tsx  RecentTradesEnhanced.tsx  TradeForm.tsx  TradingChart.tsx  WalletPanel.tsx
frontend/components/ui/: AnimatedCard.tsx  AnimatedNumber.tsx  LoadingSpinner.tsx  SkeletonLoader.tsx  StatusIndicator.tsx  ThemeToggle.tsx  Tooltip.tsx
frontend/hooks/: useContracts.ts  useKeyboardShortcuts.ts  useMarketData.ts  useOrderBook.ts  usePortfolio.ts  usePrices.ts  useSupabase.ts  useTrading.ts
frontend/lib/: evm.ts  indicators.ts  linera.ts  priceService.ts  supabase.ts  utils.ts  websocket.ts
frontend/lib/contracts/: config.ts  deployments.ts  evm-config.ts  orderbook.ts  utils.ts
frontend/lib/graphql/: client.ts
frontend/stores/: useStore.ts
frontend/utils/: format.ts
scripts/: build-contracts.ps1  deploy-full.ps1  deploy-local.ps1  deploy-local.sh  install-linera-alternative.ps1  install-rust.ps1  setup-prerequisites.ps1
supabase/migrations/: 001_initial_schema.sql
