[workspace]
members = [
    "contracts/orderbook",
    "contracts/settlement",
    "contracts/bridge",
]

[workspace.dependencies]
# Linera dependencies
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git" }
linera-base = { git = "https://github.com/linera-io/linera-protocol.git" }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# Web3 & Crypto
ethers = "2.0"
web3 = "0.19"
secp256k1 = "0.28"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
