[workspace]
members = [
    "contracts/orderbook",
    "contracts/settlement",
    "contracts/bridge",
]
resolver = "2"

[workspace.dependencies]
# Linera dependencies
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git" }
linera-base = { git = "https://github.com/linera-io/linera-protocol.git" }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tokio for tests/dev only - NOT used in WASM contract builds
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
# Tracing with minimal features for WASM compatibility
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
async-trait = "0.1"

# Web3 & Crypto (NOT for WASM contracts - only for services/off-chain)
# These are only used in non-contract code, so keep them here for reference
ethers = { version = "2.0", default-features = false }
web3 = { version = "0.19", default-features = false }
secp256k1 = "0.28"

# Utilities - minimal features for WASM compatibility
uuid = { version = "1.0", features = ["v4"], default-features = false }
# Chrono with minimal features - only serde for WASM builds
chrono = { version = "0.4", features = ["serde"], default-features = false }
