[package]
name = "axelarx-orderbook"
version = "0.1.0"
edition = "2021"
description = "AxelarX Order Book Contract - CLOB implementation for Linera microchains"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
linera-base.workspace = true
linera-sdk.workspace = true
linera-views.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# Chrono with minimal features for WASM compatibility (no std for WASM)
chrono = { workspace = true, default-features = false, features = ["serde"] }

[dev-dependencies]
# Tokio only for tests (not compiled to WASM)
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
